# openai-compressor

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
openai_compressor/: __init__.py  benchmark.py  core.py  helpers.py  middleware.py  semantic.py  wrappers.py
openai_compressor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_semantic.py  test_wrappers.py
